# FYP_IndoorLocalization

./: README.md  conversion.html  link  webcam2.sh
RasberryPi/: RTIMULib.ini.ini  encoder.py  imu3.py  imu_bus  install.sh  test0.py  test3.py
RasberryPi/python/imu_calib_files/: RTIMULib2.ini  RTIMULib_090518_calib1.ini  RTIMULib_epsilon_ccab.ini  (+1 more)
cam_calibration/: default.xml  out_camera_data.xml  out_camera_data_logitechcam.xml
catkin_ws/: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src_pakage/: CMakeLists.txt  README.md  package.xml
catkin_ws/src_pakage/rviz/: urdf.rviz
catkin_ws/src_pakage/scripts/: tf_publisher.py
catkin_ws/src_pakage/urdf/: 07-physics.urdf  display.urdf  pyramid.dae
raspberryPi/: RTIMULib_090418_calib1.ini  RTIMULib_calibrated.ini  encoder.py  pc_server.py  pc_server2.py  read_IMU_v2.py
raspberryPi/imu_calib_files/: RTIMULib1.ini
reference_code/: face_pose_estimation.py
referencesCodes/: imu2.py  imu_example.py  plot.py
referencesCodes/server_client_examples/: client2.py  server.py
rviz/: myviz.py  rviz_markers.py  test.html  vitag_markers.py
rviz_indoor_localization/: CMakeLists.txt  README.md  package.xml
rviz_indoor_localization/launch/: display.launch
sensorFusion/: README.md  fusion.py  fusion2.py  fusion_v3.py  kalman.py  kalman_backup.py  kalman_v1.py  kalman_v2.py  plot.py  plot2.py
tag_detection/: main.py  markers.yaml  test.py  test.txt  test0.py  test2.py  test3.py
vision_PoseEstimation/: main.py
vision_PoseEstimation/camCalibration/: camera_calibration  default.xml
(+16 files in other folders)
